--- a/Resturant-Management-System/Properties/Resources.resx
+++ b/Resturant-Management-System/Properties/Resources.resx
@@ -118,11 +118,14 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Kitchen-2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Kitchen-2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Logout - 2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Logout - 2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Home-1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Home-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Kitchen-1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Kitchen-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ResturantManagementIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ResturantManagementIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,6 +157,9 @@
   <data name="Categories-1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Categories-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Settings-1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Settings-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="User-Interface" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\User-Interface.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -163,13 +169,13 @@
   <data name="Staff-1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Staff-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Kitchen-1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Kitchen-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Kitchen-2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Kitchen-2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Table-2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Table-2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Settings-1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Settings-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Logout - 1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Logout - 1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
